[package]
name = "aravoxel-bevy2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_egui = "0.25.0"
libnoise = "1.1.2"
rand = "0.8.1"
bevy_atmosphere = "0.9.0"


[dependencies.bevy]
version = "0.13.0"
default-features = true
features = ["wayland", "multi-threaded"]

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

